# modern-di-faststream

./: CLAUDE.md  Justfile  README.md  pyproject.toml
.github/workflows/: release.yml
architecture/: README.md  dependency-injection.md
examples/: app.py
modern_di_faststream/: __init__.py  main.py
planning/: README.md
planning/changes/: 2026-06-04.01-faststream-0.7-migration.md  2026-07-13.01-adopt-integration-kit.md  2026-07-24.01-canonical-example-onramp.md
planning/decisions/: 2026-06-25-keep-dimiddlewarefactory.md
planning/releases/: 2.10.0.md  2.8.3.md  2.8.4.md  2.9.0.md  3.0.0.md
planning/specs/: 2026-06-04-faststream-0.7-migration-design.md
tests/: conftest.py  dependencies.py  test_example.py  test_faststream_di.py  test_lifespan.py
