[project]
name = "modern-di-faststream"
description = "Modern-DI integration for FastStream"
authors = [{ name = "Artur Shiriev", email = "me@shiriev.ru" }]
requires-python = ">=3.10,<4"
license = "MIT"
readme = "README.md"
keywords = ["DI", "dependency injector", "ioc-container", "FastStream", "python"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["faststream>=0.5,<1", "modern-di>=2,<3"]
version = "0"

[project.urls]
repository = "https://github.com/modern-python/modern-di-faststream"
docs = "https://modern-di.readthedocs.io"

[dependency-groups]
dev = [
    "faststream[nats]",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "httpx",
    "asgi-lifespan",
]
lint = [
    "mypy",
    "ruff",
    "eof-fixer",
    "typing-extensions",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["modern_di_faststream"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.ruff]
fix = false
unsafe-fixes = true
line-length = 120
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1", # allow missing docstrings
    "S101", # allow asserts
    "TCH", # ignore flake8-type-checking
    "FBT", # allow boolean args
    "D203", # "one-blank-line-before-class" conflicting with D211
    "D213", # "multi-line-summary-second-line" conflicting with D212
    "COM812", # flake8-commas "Trailing comma missing"
    "ISC001", # flake8-implicit-str-concat
    "G004", # allow f-strings in logging
]
isort.lines-after-imports = 2
isort.no-lines-before = ["standard-library", "local-folder"]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report term-missing"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.report]
exclude_also = [
    "if typing.TYPE_CHECKING:",
]
